--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==0.7.0
 asgiref==3.4.1
 backcall==0.2.0
 click==8.0.1
@@ -5,15 +6,18 @@ cycler==0.10.0
 debugpy==1.3.0
 decorator==5.0.9
 fastapi==0.66.0
+gunicorn==20.1.0
 h11==0.12.0
 ipykernel==6.0.2
 ipython==7.25.0
 ipython-genutils==0.2.0
 jedi==0.18.0
+Jinja2==3.0.1
 joblib==1.0.1
 jupyter-client==6.1.12
 jupyter-core==4.7.1
 kiwisolver==1.3.1
+MarkupSafe==2.0.1
 matplotlib==3.4.2
 matplotlib-inline==0.1.2
 nltk==3.6.2
